[tool.poetry]
name = "olx-apartments-parser"
version = "0.1.0"
description = ""
authors = ["rmatusevych <92380278+rmatusevych@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
playwright = "^1.49.0"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
